# genai-workshop

./: .gitignore  .python-version  Makefile  PLAN.md  README.md  genai  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  audio_cli.py  main.py  vision_cli.py
samples/: README.md
src/: __init__.py
src/audio/: __init__.py  audio_pipeline.py  chunker.py  summarizer.py  transcriber.py
src/llm/: __init__.py  client.py  formatters.py  prompts.py
src/pipelines/: __init__.py  diagram_explainer.py  meeting_minutes.py  multimodal.py  receipt_parser.py  screen_qa.py
src/utils/: __init__.py  config.py  exceptions.py  file_handlers.py  validators.py
src/vision/: __init__.py  analyzer.py  descriptor.py  ocr.py  vision_pipeline.py
tests/: __init__.py
