[project]
name = "genai-workshop"
version = "0.1.0"
description = "Local offline AI utilities using MLX Whisper and Ollama"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Yashwant"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ollama>=0.1.0",
    "mlx-whisper>=0.1.0",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

