[project]
name = "genai-workshop"
version = "0.1.0"
description = "Local offline AI utilities using MLX Whisper and Ollama"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Yashwant"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "ollama>=0.1.0",
    "mlx-whisper>=0.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (F) and arrow (E, W) codes by default.
# Also enable isort (I)
select = ["E", "F", "I", "W"]
ignore = ["E501"]
# Allow fixes for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

